tests/lean/omega-failure.lean.expected.out
omega-failure.lean:5:22-5:27: error: omega could not prove the goal:
it is false
omega-failure.lean:7:32-7:37: error: omega could not prove the goal:
a possible counterexample may satisfy the constraints
  a ≥ 0
where
 a := ↑x
omega-failure.lean:9:42-9:47: error: omega could not prove the goal:
a possible counterexample may satisfy the constraints
  a - b ≥ 0
  a ≥ 0
where
 a := ↑x
 b := y
omega-failure.lean:11:51-11:56: error: omega could not prove the goal:
a possible counterexample may satisfy the constraints
  b ≤ 0
  6 ≤ a ≤ 9
where
 a := x
 b := y
omega-failure.lean:22:2-22:7: error: omega could not prove the goal:
a possible counterexample may satisfy the constraints
  d ≥ 0
  a - b ≥ 1
  c ≥ 0
  a - d ≤ -1
  b ≥ 0
  a ≥ 0
  c + d ≥ -1
where
 a := ↑(sizeOf xs)
 b := ↑(sizeOf y)
 c := ↑(sizeOf x.fst)
 d := ↑(sizeOf x.snd)
omega-failure.lean:26:67-26:72: error: omega could not prove the goal:
a possible counterexample may satisfy the constraints
  c ≥ 0
  a - b - c ≥ 0
  b ≥ 0
  a ≥ 0
where
 a := ↑reallyreallyreallyreally
 b := ↑longlonglonglong
 c := ↑namenamename
omega-failure.lean:32:72-32:77: error: omega could not prove the goal:
a possible counterexample may satisfy the constraints
  x ≥ 0
  a_1 ≥ 0
  v ≥ 0
  c_1 ≥ 0
  b_1 ≥ 0
  e_1 ≥ 0
  z ≥ 0
  q ≥ 0
  s ≥ 0
  d_1 ≥ 0
  u ≥ 0
  t ≥ 0
  w ≥ 0
  q + r + s + t + u + v + w + x + y + z + a_1 + b_1 + c_1 + d_1 + e_1 ≥ 100
  r ≥ 0
  y ≥ 0
where
 q := ↑b
 r := ↑c
 s := ↑d
 t := ↑e
 u := ↑f
 v := ↑g
 w := ↑h
 x := ↑i
 y := ↑j
 z := ↑k
 a_1 := ↑l
 b_1 := ↑m
 c_1 := ↑n
 d_1 := ↑o
 e_1 := ↑p
